@@ -55,12 +55,21 @@ class ElevationTest(TestCase):
         topo = TopologyFactory.create(no_path=True)
         topo.add_path(self.path, start=0.5, end=0.5)
         topo.save()
-
+        self.assertEqual(topo.geom_3d.coords[2], 5.0)
         self.assertEqual(topo.ascent, 0)
         self.assertEqual(topo.descent, 0)
         self.assertEqual(topo.min_elevation, 5)
         self.assertEqual(topo.max_elevation, 5)
 
+    def test_elevation_topology_point_offset(self):
+        topo = TopologyFactory.create(no_path=True,offset=1)
+        topo.add_path(self.path, start=0.5, end=0.5)
+        topo.save()
+        self.assertEqual(topo.geom_3d.coords[2], 5.0)
+        self.assertEqual(topo.ascent, 0)
+        self.assertEqual(topo.descent, 0)
+        self.assertEqual(topo.min_elevation, 5)
+        self.assertEqual(topo.max_elevation, 5)
 
 class ElevationProfileTest(TestCase):
     def test_elevation_profile_wrong_geom(self):
